ace-dashboard-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ace-dashboard-ui
  namespace: ace-demo
spec:
  selector:
    app.kubernetes.io/instance: ace-dashboard
    app.kubernetes.io/name: ace-dashboard
  ports:
  - name: ui-https
    port: 8300
    targetPort: 8300
---
apiVersion: v1
kind: Service
metadata:
  name: ace-dashboard-api
  namespace: ace-demo
spec:
  selector:
    app.kubernetes.io/instance: ace-dashboard
    app.kubernetes.io/name: ace-dashboard
  ports:
  - name: api-https
    port: 8400
    targetPort: 8400
